# turbojpeg-python

./: .gitmodules  CMakeLists.txt  README.md  setup.py  turbojpeg.cc
scripts/: bench-decoding.py  bench-encoding.py  test.py  threaded.py
